crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/unary.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
!x::y;
!(x::y /* foo */);
!(/* foo */ x::y);
!(
  /* foo */
  x::y
);
!(
  x::y
  /* foo */
);
!(
  x::y // foo
);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,14 +1,20 @@
-!x::y;
-!(x::y /* foo */);
-!(/* foo */ x::y);
+!x;
+::y
+!(x
+::y /* foo */)
+!(/* foo */ x
+::y)
 !(
   /* foo */
-  x::y
-);
+  x
+::y
+)
 !(
-  x::y
+  x
+::y
   /* foo */
-);
+)
 !(
-  x::y // foo
-);
+  x
+::y // foo
+)
```

# Output

```js
!x;
::y
!(x
::y /* foo */)
!(/* foo */ x
::y)
!(
  /* foo */
  x
::y
)
!(
  x
::y
  /* foo */
)
!(
  x
::y // foo
)
```


# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ unary.js:1:3
  │
1 │ !x::y;
  │ --^
  │ │ │
  │ │ An explicit or implicit semicolon is expected here...
  │ ...Which is required to end this statement

error[SyntaxError]: expected `)` but instead found `:`
  ┌─ unary.js:2:4
  │
2 │ !(x::y /* foo */);
  │    ^ unexpected

error[SyntaxError]: expected `)` but instead found `:`
  ┌─ unary.js:3:14
  │
3 │ !(/* foo */ x::y);
  │              ^ unexpected

error[SyntaxError]: expected `)` but instead found `:`
  ┌─ unary.js:6:4
  │
6 │   x::y
  │    ^ unexpected

error[SyntaxError]: expected `)` but instead found `:`
  ┌─ unary.js:9:4
  │
9 │   x::y
  │    ^ unexpected

error[SyntaxError]: expected `)` but instead found `:`
   ┌─ unary.js:13:4
   │
13 │   x::y // foo
   │    ^ unexpected


```


